# AgentNativeFramework

./: .gitignore  .vercelignore  AGENT_REGISTRY.md  ARCHITECTURE.md  CLI_SYSTEM_DESIGN.md  COMPREHENSIVE_AGENT_INVENTORY.md  Cargo.toml  DEPLOY_TO_VERCEL.md  OPERATIONAL_ASSESSMENT.md  PUSH_TO_GITHUB.sh  README.md  READY_FOR_DEPLOYMENT.md  START_HERE.md  UPDATE_SUMMARY.md  claude-hive-swarm-guide.html  demo_claude_hive_swarm.sh  index.html  install.sh  package.json  test_swarm_hive_integration.py  vercel.json
config/: swarm_hive_config.yaml
core/: daemon_bridge.py
core/agents/: agent_manager.py
core/coordination/: hive_intelligence.py  swarm_hive_coordinator.py  swarm_manager.py
core/monitoring/: health_checks.py
core/resilience/: error_recovery.py
deployments/kubernetes/base/: deployment.yaml  service.yaml  servicemonitor.yaml
docs/: CLAUDE_HIVE_SWARM.md  GETTING_STARTED.md  how-to-guide.html
docs/operations/runbooks/: README.md
docs/operations/runbooks/incident-response/: service-down.md
examples/: swarm_hive_examples.md  workflows.md
mcp_server/: swarm_hive_mcp.py
public/: manifest.json  sw.js
scripts/: init-project.sh  install-claude-hive-swarm.sh  setup.sh  start-swarm-hive.sh
src/: cli.rs  daemon.rs  wave_integration.rs
